# BigWhoop

./: .clang-format  .clang-format-ignore  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  bwc-config-version.cmake.in  bwc-config.cmake.in  public_header.py
.github/workflows/: main.yml
cmake/: ThirdParty.cmake
docs/templates/: Template.F90  Template.c  Template.py  Template.txt  header.h  source.c
include/interfaces/HDF5/: H5Zbwc.h  H5Zbwc_sup.h
include/interfaces/reader/: eas3.h  netCDF.h
include/tools/: bwccmdl.h
src/interfaces/HDF5/: CMakeLists.txt  H5Zbwc.c  H5Zbwc.py  H5Zbwc_sup.c  MPASsort.py  hdf5test.c  test_hdf5.c  test_hdf5_MPAS.c
src/interfaces/fortran/: bwc.F90
src/interfaces/hdf5plugin/: __init__.py  _filters.py
src/interfaces/python/: bwc.py
src/interfaces/reader/: eas3.c  netCDF.c
src/tools/: CMakeLists.txt  bwccmdl.c  get_hash.c  test.bak
src/tools/Test/docs/: Doxyfile
src/tools/Test/docs/doxygen/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  structbwc__codec.html  structbwc__gl__ctrl.html  structbwc__gl__inf.html  structbwc__span.html  structbwc__stream.html  structbwc__stream_1_1codestream.html  structcli__arguments.html  test_8c.html
src/tools/Test/docs/doxygen/html/search/: all_1.js  all_2.js  all_4.js  classes_0.js  classes_1.js  functions_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/tools/Test/docs/doxygen/latex/: annotated.tex  files.tex  refman.aux  refman.idx  refman.tex  structbwc__codec.tex  structbwc__gl__ctrl.tex  structbwc__gl__inf.tex  structbwc__span.tex  structbwc__stream.tex  structbwc__stream_1_1codestream.tex  structcli__arguments.tex  test_8c.tex
src/tools/Test/docs/doxygen/rtf/: refman.rtf
src/tools/Test/src/: test  test.c
tests/: CMakeLists.txt  test_bitstream.cpp  test_ht_block_encoding.cpp  test_libbwc.cpp  test_tier1.cpp
tests/private/: CMakeLists.txt  bitstream.cpp
tests/public/: CMakeLists.txt  public_interface.cpp
